# VLM_EXP2

./: .gitignore  TODO.md  gemma3-4b_config.txt
autoresearch/: pyproject.toml  run.sh  train.py
autoresearch/scripts/: stage1.json
gemma_ft/: prepare.py  pyproject.toml  run.sh  test_run.sh
gemma_ft/dataset/: clean_dataset.py  dataset.py  download.py  kinetic_4K.jsonl  test_5clips.json  vatex_test.csv  vatex_test.json
gemma_ft/scripts/: stage1.json
gemma_ft/stage1/: dataset.py  forward.py  main.py  train.py  utils.py
